2004-01-21  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* configure.in: Work on the C# bindings
	* NEWS: Preparing for 0.15
	* loudmouth-1.0.pc.in: Versioned the library
	* loudmouth/Makefile.am: ditto
	* loudmouth/lm-connection.c: 
	* loudmouth/lm-connection.h: Disabled the proxy support.
	* mono/Makefile:
	* mono/Makefile.am:
	* mono/loudmouth/Makefile.am:
	* mono/loudmouth/loudmouth-api.xml:
	* mono/loudmouth/loudmouth.metadata:
	* mono/sources/loudmouth-sources.xml:
	- WIP on the bindings, first cut of generated bindings.

2004-01-16  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	(connection_failed_with_error),
	(connection_connect_cb): 
	(connection_do_connect):
	- Don't fall through after calling connection_failed.
	- Fixed bug #130449

2004-01-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/Makefile.am:
	- Added lm-ssl.[ch]
	* loudmouth/lm-connection.c:
	* loudmouth/lm-connection.h:
	- Splitted out the SSL parts
	- No longer contains loads of #ifdefs around tls parts
	- Added lm_connection_[set|get]_ssl instead.
	* loudmouth/lm-internals.h:
	- Added _lm_ssl*
	* loudmouth/lm-ssl.c:
	* loudmouth/lm-ssl.h:
	- New files, the SSL parts from LmConnection.
	- Declares no-ops for SSL functions if compiled without support for it.
	* loudmouth/test-lm.c:
	- Updated for new SSL API.

2004-01-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	- Added Sjoerd Simons to copyright list.

2004-01-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/Makefile.am:
	- Added lm-proxy.[ch]
	* loudmouth/lm-connection.c:
	* loudmouth/lm-connection.h:
	- Commited patch from Sjoerd Simons to make async connect work better.
	- Cleaned out the proxy support to it's own file.
	- Made sure all public functions user g_return_(val)_if_fail.
	* loudmouth/lm-internals.h:
	- cleaned up a bit and added proxy function and base64 encoding
	* loudmouth/lm-message-handler.c:
	- include config.h
	* loudmouth/lm-proxy.c: