@@ -13,5 +13,6 @@
     <xi:include href="xml/lm-message.xml"/>
     <xi:include href="xml/lm-message-handler.xml"/>
     <xi:include href="xml/lm-message-node.xml"/>
+    <xi:include href="xml/lm-ssl.xml"/>
   </chapter>
 </book>
