@@ -1,5 +1,15 @@
 2004-01-21  Mikael Hallendal  <micke@imendio.com>
 
+	* docs/reference/loudmouth-docs.sgml:
+	* docs/reference/loudmouth-sections.txt:
+	* docs/reference/tmpl/lm-connection.sgml:
+	* docs/reference/tmpl/loudmouth-unused.sgml:
+	* docs/reference/tmpl/lm-ssl.sgml:
+	* loudmouth/lm-ssl.h:
+	- Added new file to documentation
+
+2004-01-21  Mikael Hallendal  <micke@imendio.com>
+
 	* Makefile.am:
 	* configure.in: Work on the C# bindings
 	* NEWS: Preparing for 0.15
